--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,9 @@
     -->
     <title>Los Angeles Orthopedic Surgery Specialists & Advanced Orthopedics</title>
 
-    <link rel="preload" href="https://i.imgur.com/h0IBfBs.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/7eluDts.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/9ro5eys.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/rF1lEg4.webp" as="image" />
 
     <link
       rel="preload"
