added conditional closed for montebello and glendale, updated carousel images

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,9 +27,12 @@
     -->
     <title>Los Angeles Orthopedic Surgery Specialists & Advanced Orthopedics</title>
 
-    <link rel="preload" href="https://i.imgur.com/7eluDts.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/9ro5eys.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/rF1lEg4.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/2seXrrT.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/46JeJHq.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/8dBCcKS.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/yVpGfMF.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/u6WbgWF.webp" as="image" />
+
 
     <link
       rel="preload"
