--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,6 +55,7 @@
       link.setAttribute('defer', 'true');
       document.head.appendChild(link);
     </script>
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-RYGTF545WK"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-RYGTF545WK'); </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
