updated two carousel images to fit better on 575 or smaller screens

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,8 @@
 
     <link rel="preload" href="https://i.imgur.com/2seXrrT.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/46JeJHq.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/rmAtIpr.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/Mdo73o9.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/8dBCcKS.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/yVpGfMF.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/u6WbgWF.webp" as="image" />
