--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,53 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.imgur.com/GnIeZhR.webp" />
+    <link rel="icon" href="https://i.imgur.com/duceMYA.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Los Angeles Orthopedic Surgery Specialists & Advanced Orthopedics</title>
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <link rel="preload" href="https://i.imgur.com/2seXrrT.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/46JeJHq.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/rmAtIpr.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/Mdo73o9.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/8dBCcKS.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/yVpGfMF.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/u6WbgWF.webp" as="image" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>Riverside Orthopedics</title>
+
+    <link rel="preload" href="https://i.imgur.com/KRQMs5L.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/hl6j14o.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/oqCqJux.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/pErxD82.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/Hu9EIX9.webp" as="image" />
+
+    
+    <link
+      rel="preload"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <noscript>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      />
     </noscript>
-
+    <link href="/static/css/main.52718e7d.css" rel="stylesheet">
+    <script src="/static/js/main.20c9c502.js"></script>
+    
     <script>
-        var link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.href = 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css';
-        link.setAttribute('defer', 'true');
-        document.head.appendChild(link);
+      var link = document.createElement('link');
+      link.rel = 'stylesheet';
+      link.href =
+        'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css';
+      link.setAttribute('defer', 'true');
+      document.head.appendChild(link);
     </script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RYGTF545WK"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-RYGTF545WK');
-    </script>
-</head>
-
-<body>
+    <!-- Google tag (gtag.js) <script async src="https://www.googletagmanager.com/gtag/js?id=G-RYGTF545WK"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-RYGTF545WK'); </script> -->
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -59,6 +76,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-
+  </body>
 </html>
