--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Riverside Orthopedics</title>
+    <title>Orthopaedic Associates of Riverside</title>
 
     <link rel="preload" href="https://i.imgur.com/KRQMs5L.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/hl6j14o.webp" as="image" />
