team and location components responsive

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,9 +30,9 @@
 
     <link rel="preload" href="https://i.imgur.com/KRQMs5L.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/hl6j14o.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/oqCqJux.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/qeHdPfp.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/pErxD82.webp" as="image" />
-    <link rel="preload" href="https://i.imgur.com/Hu9EIX9.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/ECpdKat.webp" as="image" />
 
     
     <link
