--- a/client/public/index.html
+++ b/client/public/index.html
@@ -51,6 +51,12 @@
     <link rel="preload" href="https://i.imgur.com/qeHdPfps.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/pErxD82s.webp" as="image" />
     <link rel="preload" href="https://i.imgur.com/ECpdKats.webp" as="image" />
+
+    <link rel="preload" href="https://i.imgur.com/KRQMs5Lxs.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/hl6j14oxs.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/qeHdPfpxs.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/pErxD82xs.webp" as="image" />
+    <link rel="preload" href="https://i.imgur.com/ECpdKatxs.webp" as="image" />
     
     <link
       rel="preload"
