--- a/client/public/index.html
+++ b/client/public/index.html
@@ -77,7 +77,11 @@
     </script>
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-
+        <script>
+          if (window.location.hostname === "www.orthoriverside.com") {
+            window.location.replace("https://www.midlandriversideortho.com" + window.location.pathname);
+          }
+        </script>
     <!-- Google tag (gtag.js) <script async src="https://www.googletagmanager.com/gtag/js?id=G-RYGTF545WK"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-RYGTF545WK'); </script> -->
   </head>
   <body>
